# equipo-said

./: README.md  practica4.cpp  recursos.md
notas/: Lista enlazada.md
practica1/: CMakeLists.txt
practica2/: CMakeLists.txt  main.cpp
practica3/: CMakeLists.txt  main.cpp
practica4/: CMakeLists.txt  main.cpp
